--- a/src/petmatch.css
+++ b/src/petmatch.css
@@ -1,6 +1,6 @@
 div.mover {
   background-color: aliceblue;
-  width: 500px;
+  width: 60%;
   margin: auto;
   margin-top: 5px;
   margin-bottom: 5px;
@@ -13,7 +13,7 @@ img {
 }
 
 div.normal {
-  width: 500px;
+  width: 60%;
   margin: auto;
   margin-top: 5px;
   margin-bottom: 5px;
